Upgraded full model.
