# middle/api-freezebee/model/need.js
@@ -2,17 +2,24 @@
  * The object representing an ingredient with the dosing.
  ****************************************************************/
 
+const Ingredient = require("./color");
+
 class Need {
-    ingredient;     // Reference to an of Ingredient object
     dosing;
-    
+    ingredient;     // Reference to an Ingredient object
+
     toJson = function() {
         const json = {};
-        
-        json["ingredient"] = this.ingredient ? this.ingredient.toJson() : null;
         json["dosing"] = this.dosing;
-        
+        json["ingredient"] = this.ingredient ? this.ingredient.toJson() : null;
         return json;
+    }
+    
+    static fromJson = function(json) {
+        const object = Need;
+        object.dosing = json["dosing"];
+        object.ingredient = json["ingredient"] ? Ingredient.fromJson(json["color"]) : null;
+        return object;
     }
 }
 
